--- a/index.html
+++ b/index.html
@@ -1,79 +1,227 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <title>Title</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-    </head>
+<head>
+    <title>Dashboard</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <body>
-        <header>
-            <nav class="navbar navbar-expand-md navbar-expand-lg navbar-light bg-light bg-dark">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <img src="./img/duck.png" alt="" width="30" height="30">
-                    </a>                    
-                    <button class="navbar-toggler border-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-md navbar-expand-lg navbar-light bg-light bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="./img/duck.png" alt="" width="30" height="30">
+                </a>
+                <button class="navbar-toggler border-light" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link text-white active" aria-current="page" href="#">Catalogo libri</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Link</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Link</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link text-light" href="#">Link</a>
-                      </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white active" aria-current="page" href="#">Catalogo libri</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Link</a>
+                        </li>
                     </ul>
                     <form class="d-flex">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                      <button class="btn border-light text-white" type="submit">Search</button>
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn border-light text-white" type="submit">Search</button>
                     </form>
-                  </div>
                 </div>
-              </nav>
-            <!-- place navbar here -->
-        </header>
-        <main class="mt-4">
-            <section class="container">
-                <div class="d-flex justify-content-between">
-                    <h1>Catalogo</h1>
-                    <a href="#" class="btn btn-primary btn-lg" tabindex="-1" role="button" aria-disabled="true">Primary link</a>
-                </div>
-            </section>
-        </main>
-        <footer>
-            <!-- place footer here -->
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
+            </div>
+        </nav>
+        <!-- place navbar here -->
+    </header>
+    <main class="mt-4">
+        <section class="container">
+            <div class="row">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-8">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h1>Catalogo</h1>
+                        <a href="#" class="btn btn-primary btn-sm btn-md btn-lg" tabindex="-1" role="button"
+                            aria-disabled="true">Aggiungi libro</a>
+                    </div>
+                    <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th scope="col">Titolo</th>
+                            <th scope="col" class="d-sm-none d-md-table-cell">Data prestito</th>
+                            <th scope="col">Stato</th>
+                            <th scope="col">Azioni</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="align-middle">
+                                <td scope="row">I pilastri della terra</td>
+                                <td class="d-sm-none d-md-table-cell">-</td>
+                                <td><span class="badge bg-success">Disponibile</span>
+                                </td>
+                                <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                            </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-success">Disponibile</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-success">Disponibile</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-success">Disponibile</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-success">Disponibile</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-success">Disponibile</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-warning">In prestito</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-success">Disponibile</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-danger">Non disponibile</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-success">Disponibile</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
+                          <tr class="align-middle">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-sm-none d-md-table-cell">-</td>
+                            <td><span class="badge bg-success">Disponibile</span>
+                            </td>
+                            <td><button class="rounded"><i class="fa-solid fa-pencil"></i></button><button class="rounded"><i class="fa-solid fa-trash"></i></button></td>
+                          </tr>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+                        </tbody>
+                      </table>
+                </div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-4">
+                    <div class="card">
+                        <div class="card-header fs-3">
+                          Todo
+                        </div>
+                            <ul class="list-group m-3">
+                                <li class="list-group-item">
+                                  <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                  Chiamare segreteria
+                                </li>
+                                <li class="list-group-item">
+                                  <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                  Mandare avvisi prestiti scaduti
+                                </li>
+                                <li class="list-group-item">
+                                  <input class="form-check-input me-1" type="checkbox" value="" aria-label="...">
+                                  Ordinare nuovi libri
+                                </li>
+                            </ul>
+                    </div>
+                    <div class="card mt-4">
+                        <div class="card-header fs-3">
+                          F.A.Q
+                        </div>
+                        <div class="accordion accordion-flush m-3" id="accordionFlushExample">
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                  Come aggiungere nuovo
+                                </button>
+                              </h2>
+                              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="flush-headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                                  Come posso accedere all'anagrafica utenti?
+                                </button>
+                              </h2>
+                              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="flush-headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                                  Posso usare questa dashboard da mobile?
+                                </button>
+                              </h2>
+                              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+    <footer>
+        <!-- place footer here -->
+    </footer>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
